--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+/* This file is used to define global styles that are applied to the entire application. */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
